# RedQuanta-MCP

./: .readthedocs.yaml  CLAUDE_DESKTOP_INTEGRATION.md  CURSOR_INTEGRATION.md  Dockerfile  PRODUCTION_DEPLOYMENT.md  README.md  claude_desktop_config.json  cleanup-production.ps1  docker-compose.yml  docker-security-tools.yml  eslint.config.mjs  mcp-manifest.json  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  redquanta-cli.bat  start-production.ps1  start-server.ps1  start-windows.bat  tsconfig.json
config/: allowedCommands-windows.json  allowedCommands.json  allowedPaths-windows.json  allowedPaths.json  deniedPatterns.json
deployment/: troubleshooting.md
docs/: API.md  DEPLOYMENT.md  README.md  index.md  requirements.txt
docs/api/: MCP_PROTOCOL.md  REST_API.md  index.html  openapi.json  openapi.md
docs/deployment/: docker.md  monitoring.md  troubleshooting.md
docs/development/: PLUGIN_DEVELOPMENT.md  architecture.md  plugin-development.md
docs/examples/: LLM_USAGE_GUIDE.md  advanced-workflows.md  basic-scanning.md  common-workflows.md
docs/getting-started/: configuration.md  first-scan.md  installation.md  quick-start.md
docs/installation/: SETUP_LINUX.md
docs/security/: legal-ethics.md  model.md
plugins/: example-custom-tool.js
scripts/: build-docs.ts  generate-openapi.ts  generate-svg-assets.ts  install-tools-windows.ps1  setup-windows.ps1
src/: cli.ts  server.ts
src/core/: helpSystem.ts  mcpRouter.ts  pluginSystem.ts  workflowEngine.ts
src/tools/: base.ts  ddgSearch.ts  (+5 more)
tests/: setup.ts
(+17 files in other folders)
