[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "redquanta-mcp-docs"
version = "0.3.0"
description = "Documentation for RedQuanta MCP"
authors = ["sc4rfurry <sc4rfurry@redquanta.dev>"]
readme = "README.md"
packages = []

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-committers-plugin-2 = "^1.2.0"
mkdocs-minify-plugin = "^0.7.0"
mkdocs-swagger-ui-tag = "^0.6.0"
pymdown-extensions = "^10.3.0"
markdown = "^3.5.0"
pygments = "^2.16.0"
mike = "^2.0.0"
jinja2 = "^3.1.0"
pyyaml = "^6.0.0"
watchdog = "^3.0.0"
